Fix nav link vertical alignment

--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -32,6 +32,7 @@
   text-decoration: none;
   text-align: left;
   color: #fff;
+  line-height: 32px;
 }
 
 
@@ -42,7 +43,7 @@
 }
 
 #nav li a.active {
-  color: #f06000
+  color: #f06000;
 }
 
 #nav li a.active:hover,
